force-app/main/default/objects/Distributed_Goods__c/Distributed_Goods__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Distributed Goods</label>
    <nameField>
        <displayFormat>DistributedGoods-{0000}</displayFormat>
        <label>Distributed Good #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributed Goods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>