force-app/main/default/objects/Distributed_Goods__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Condoms</fullName>
            </value>
            <value>
                <fullName>Lube</fullName>
            </value>
            <value>
                <fullName>Syringes</fullName>
            </value>
            <value>
                <fullName>Educational Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>