force-app/main/default/objects/Distributed_Goods__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Distributed Goods</relationshipLabel>
    <relationshipName>Distributed_Goods</relationshipName>
    <type>Lookup</type>
</CustomField>