force-app/main/default/objects/Distributed_Goods__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Distributed Goods</relationshipLabel>
    <relationshipName>Distributed_Goods</relationshipName>
    <type>Lookup</type>
</CustomField>