force-app/main/default/objects/Distributed_Goods__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Delivery of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>