force-app/main/default/objects/Distributed_Goods__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>